--- a/website/package.json
+++ b/website/package.json
@@ -11,9 +11,10 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "nuxt": "^2.0.0",
     "cross-env": "^5.2.0",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "nuxt": "^2.0.0",
+    "vuetify": "^2.0.19"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.8.5",
