--- a/website/package.json
+++ b/website/package.json
@@ -14,9 +14,11 @@
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
     "nuxt": "^2.0.0",
+    "sass-loader": "^8.0.0",
     "vuetify": "^2.0.19"
   },
   "devDependencies": {
+    "@mdi/font": "^4.4.95",
     "@nuxtjs/vuetify": "^1.8.5",
     "nodemon": "^1.18.9"
   }
