--- a/website/package.json
+++ b/website/package.json
@@ -11,13 +11,18 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.6.0",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
+    "firebase": "^7.0.0",
     "nuxt": "^2.0.0",
     "sass-loader": "^8.0.0",
     "vuetify": "^2.0.19"
   },
   "devDependencies": {
+    "@babel/cli": "^7.6.2",
+    "@babel/core": "^7.6.2",
+    "@babel/preset-env": "^7.6.2",
     "@mdi/font": "^4.4.95",
     "@nuxtjs/vuetify": "^1.8.5",
     "nodemon": "^1.18.9"
